tests/test_files/valid/nested_attribute_assignment.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

MyStructComposition anotherLocation
    my_location: {"id" : "0x4711", "type" :"pallet"}
End
