tests/test_files/invalid/syntax/json_array_trailing_comma.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

MyStructComposition structComp1
    my_location : {
        "id" : ["test", 1, 4, 3,]
    }
End
